--- a/package.json
+++ b/package.json
@@ -19,6 +19,19 @@
     "test:ember": "ember test",
     "fmt": "prettier -w ."
   },
+  "dependencies": {
+    "broccoli-plugin": "^4.0.7",
+    "broccoli-source": "^3.0.1",
+    "csv-parse": "^4.16.3",
+    "normalize.css": "^8.0.1",
+    "simple-evaluate": "^1.4.3",
+    "ember-composable-helpers": "^4.5.0",
+    "ember-math-helpers": "^2.16.0",
+    "ember-set-helper": "^2.0.1",
+    "ember-truth-helpers": "^3.0.0",
+    "prember": "^1.0.5",
+    "sass": "^1.39.2"
+  },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.4.2",
@@ -37,21 +50,17 @@
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-composable-helpers": "^4.5.0",
     "ember-data": "~3.28.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-math-helpers": "^2.16.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-modifier": "^2.1.2",
     "ember-page-title": "^6.2.2",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
-    "ember-set-helper": "^2.0.1",
     "ember-source": "~3.28.0",
     "ember-template-lint": "^3.6.0",
-    "ember-truth-helpers": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.4",
@@ -60,23 +69,14 @@
     "eslint-plugin-qunit": "^6.2.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prember": "^1.0.5",
     "prettier": "^2.3.2",
     "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0",
-    "sass": "^1.39.2"
+    "qunit-dom": "^1.6.0"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
-  },
-  "dependencies": {
-    "broccoli-plugin": "^4.0.7",
-    "broccoli-source": "^3.0.1",
-    "csv-parse": "^4.16.3",
-    "normalize.css": "^8.0.1",
-    "simple-evaluate": "^1.4.3"
   }
 }
